feat (Cors config) : allow react dev server and dockerized frontend